--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
-.App {
+body {
+  background-color: pink;
+  margin: 40px 50px;
+  font-family: "Nunito", sans-serif;
+}
+
+.boxPlaylist {
+  width: 300px;
+  border-radius: 10px;
+  padding: 20px;
+  background-color: #cfdff1;
+  box-shadow: 2px 2px 5px #a2b1c6;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.boxPlaylist img {
+  width: 80%;
+  padding-top: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btnSelect {
+  width: 50%;
+  padding: 8px;
+  border: 0;
+  border-radius: 8px;
+  background-color: #ffb6c1;
+  box-shadow: 2px 2px 5px #a2b1c6;
+  color: black;
+  font-size: 14px;
+  font-family: "Nunito", sans-serif;
 }
