--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,10 @@ body {
   font-size: 14px;
   font-family: "Nunito", sans-serif;
 }
+
+.trackList {
+  display: grid;
+  justify-items: center;
+  grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
+  gap: 20px;
+}
