--- a/src/App.css
+++ b/src/App.css
@@ -4,42 +4,73 @@ body {
   font-family: "Nunito", sans-serif;
 }
 
-.boxPlaylist {
+.box-Playlist {
   width: 300px;
   border-radius: 10px;
   padding: 15px;
   background-color: #cfdff1;
   box-shadow: 2px 2px 5px #a2b1c6;
   text-align: center;
+  /* width: 250px;
+  border-radius: 8px;
+  border: 2px solid #b7cadb;
+  padding: 14px;
+  background-color: white; */
 }
 
-.boxPlaylist img {
-  width: 80%;
+.box-Playlist img {
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
+  /* width: 80%; */
 }
 
-.boxPlaylist h3 {
+.box-Playlist h3 {
   margin-top: 10px;
 }
 
-.boxPlaylist p {
+.box-Playlist p {
   margin-top: 5px;
 }
 
-.btnSelect {
-  width: 50%;
-  padding: 8px;
-  border: 0;
-  border-radius: 8px;
-  background-color: #ffb6c1;
-  box-shadow: 2px 2px 5px #a2b1c6;
-  color: whitesmoke;
-  font-size: 14px;
-  font-family: "Nunito", sans-serif;
-}
-
-.trackList {
+.track-list {
   display: grid;
   justify-items: center;
   grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
   gap: 20px;
+  margin: 20px 0;
+}
+
+.login-app {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.form-search .form-group {
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+  gap: 12px;
+  margin: 30px 0;
+}
+
+.form-search input {
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  padding: 8px 16px;
+  font-family: "Poppins", sans-serif;
+  font-size: 14px;
+}
+
+.btn-primary {
+  padding: 8px 16px;
+  border: 0;
+  border-radius: 5px;
+  box-shadow: 2px 2px 5px #a2b1c6;
+  color: rgb(14, 13, 13);
+  font-size: 14px;
+  font-family: "Nunito", sans-serif;
+  cursor: pointer;
+  text-decoration: none;
 }
