--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,29 @@
-body {
-  background-color: pink;
-  margin: 40px 50px;
+* {
   font-family: "Nunito", sans-serif;
 }
 
+body {
+  background-color: sienna;
+  margin: 40px 50px;
+}
+
 .box-Playlist {
-  width: 300px;
   border-radius: 10px;
   padding: 15px;
   background-color: #cfdff1;
-  box-shadow: 2px 2px 5px #a2b1c6;
+  box-shadow: 2px 2px 5px rgb(78, 39, 2);
   text-align: center;
-  /* width: 250px;
-  border-radius: 8px;
-  border: 2px solid #b7cadb;
-  padding: 14px;
-  background-color: white; */
 }
 
 .box-Playlist img {
   width: 100%;
   height: auto;
   border-radius: 8px;
-  /* width: 80%; */
 }
 
 .box-Playlist h3 {
-  margin-top: 10px;
+  font-weight: 600;
+  min-height: 60px;
 }
 
 .box-Playlist p {
@@ -50,27 +47,53 @@ body {
 .form-search .form-group {
   display: flex;
   flex-direction: row;
-  justify-content: left;
   gap: 12px;
-  margin: 30px 0;
 }
 
 .form-search input {
   border-radius: 5px;
   border: 1px solid #ccc;
   padding: 8px 16px;
-  font-family: "Poppins", sans-serif;
   font-size: 14px;
 }
 
-.btn-primary {
+.btn {
   padding: 8px 16px;
   border: 0;
   border-radius: 5px;
-  box-shadow: 2px 2px 5px #a2b1c6;
-  color: rgb(14, 13, 13);
+  box-shadow: 2px 2px 5px rgb(78, 39, 2);
   font-size: 14px;
-  font-family: "Nunito", sans-serif;
   cursor: pointer;
   text-decoration: none;
+}
+
+.btn-primary {
+  background-color: sandybrown;
+  color: rgb(14, 13, 13);
+}
+
+.btn-secondary {
+  background-color: rgb(253, 189, 105);
+  color: rgb(14, 13, 13);
+  font-weight: 500;
+}
+
+.btn-select {
+  width: 30%;
+  margin-top: 10px;
+}
+
+.search-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin: 20px 0;
+}
+
+.btn-text {
+  color: rgb(14, 13, 13);
+  border: none;
+  background-color: sandybrown;
+  padding: 5px;
+  margin: 12px 0;
 }
