--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,107 @@ body {
   margin: 40px 50px;
 }
 
+.login-app {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.form input, textarea {
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  padding: 8px 16px;
+  font-size: 14px;
+}
+
+.form-search .form-group {
+  display: flex;
+  flex-direction: row;
+  gap: 12px;
+}
+
+.form-search input {
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  padding: 8px 16px;
+  font-size: 14px;
+}
+
+.btn {
+  padding: 8px 16px;
+  border: 0;
+  border-radius: 5px;
+  box-shadow: 2px 2px 5px rgb(78, 39, 2);
+  font-size: 14px;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.btn-primary {
+  background-color: sandybrown;
+  color: rgb(14, 13, 13);
+  width: 25%;
+}
+
+.btn-secondary {
+  background-color: rgb(253, 189, 105);
+  color: rgb(14, 13, 13);
+  font-weight: 500;
+  width: 25%;
+}
+
+
+hr {
+  border: 1px solid sandybrown;
+  margin: 30px 0;
+}
+
+.btn-text {
+  color: rgb(14, 13, 13);
+  border: none;
+  background-color: sandybrown;
+  padding: 5px;
+  margin: 12px 0;
+}
+
+/* Form Create Playlist */
+.form-playlist .form {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  width: 500px;
+}
+
+.form-playlist .form .form-group {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.form-playlist textarea {
+  resize: none;
+  height: 80px;
+}
+
+/* Search Playlist */
+.search-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin: 20px 0;
+}
+
+.search-wrapper .form .form-group {
+  display: flex;
+  flex-direction: row;
+  gap: 12px;
+}
+
+.search-wrapper input {
+  width: 100%;
+}
+
+/* Box Playlist */
 .box-Playlist {
   border-radius: 10px;
   padding: 15px;
@@ -38,62 +139,7 @@ body {
   margin: 20px 0;
 }
 
-.login-app {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.form-search .form-group {
-  display: flex;
-  flex-direction: row;
-  gap: 12px;
-}
-
-.form-search input {
-  border-radius: 5px;
-  border: 1px solid #ccc;
-  padding: 8px 16px;
-  font-size: 14px;
-}
-
-.btn {
-  padding: 8px 16px;
-  border: 0;
-  border-radius: 5px;
-  box-shadow: 2px 2px 5px rgb(78, 39, 2);
-  font-size: 14px;
-  cursor: pointer;
-  text-decoration: none;
-}
-
-.btn-primary {
-  background-color: sandybrown;
-  color: rgb(14, 13, 13);
-}
-
-.btn-secondary {
-  background-color: rgb(253, 189, 105);
-  color: rgb(14, 13, 13);
-  font-weight: 500;
-}
-
 .btn-select {
   width: 30%;
   margin-top: 10px;
-}
-
-.search-wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  margin: 20px 0;
-}
-
-.btn-text {
-  color: rgb(14, 13, 13);
-  border: none;
-  background-color: sandybrown;
-  padding: 5px;
-  margin: 12px 0;
 }
