--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ body {
   margin: 40px 50px;
 }
 
-.login-app {
+.login-wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -47,6 +47,10 @@ body {
   background-color: sandybrown;
   color: rgb(14, 13, 13);
 }
+.btn-logout{
+  background-color: sandybrown;
+  color: rgb(14, 13, 13);
+}
 
 .btn-primary {
   background-color: sandybrown;
@@ -61,10 +65,15 @@ body {
   width: auto;
 }
 
-
 hr {
-  border: 1px solid sandybrown;
+  border: 2px solid sandybrown;
   margin: 30px 0;
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .btn-text {
@@ -76,6 +85,7 @@ hr {
 }
 
 /* Form Create Playlist */
+
 .form-playlist .form {
   display: flex;
   flex-direction: column;
