--- a/src/App.css
+++ b/src/App.css
@@ -43,10 +43,11 @@ body {
   text-decoration: none;
 }
 
-.btn-login {
+/* .btn-login {
   background-color: sandybrown;
   color: rgb(14, 13, 13);
-}
+} */
+
 .btn-logout{
   background-color: sandybrown;
   color: rgb(14, 13, 13);
@@ -126,8 +127,8 @@ hr {
 .box-Playlist {
   border-radius: 10px;
   padding: 15px;
-  background-color: #cfdff1;
-  box-shadow: 2px 2px 5px rgb(78, 39, 2);
+  background-color: #c47852;
+  box-shadow: 2px 2px 5px rgb(66, 33, 2);
   text-align: center;
 }
 
@@ -159,6 +160,6 @@ hr {
 }
 
 .btn-select {
-  width: 30%;
+  width: 100%;
   margin-top: 10px;
 }
